--- a/In_Class/28_PIZZA_APP/pizzas/templates/pizzas/home.html
+++ b/In_Class/28_PIZZA_APP/pizzas/templates/pizzas/home.html
@@ -10,7 +10,20 @@
     {% else %}
         <h2>Welcome Guest</h2>
     {% endif %}
-        
+    
+    <div class="homeImage">
+                {% if messages %}
+                {% for message in messages %}
+                    {% if message.tags == "warning" %}
+                        <div id="warning" class="message rounded col-md-2">{{ message }}</div>
+                    {% elif message.tags == "success" %}
+                        <div id="success" class="message rounded col-md-2">{{ message }}</div>
+                    {% else %}
+                        <div id="info" class="message rounded col-md-2" >{{ message }}</div>
+                    {% endif %}
+                {% endfor %}
+                {% endif %}
+        </div>
 
 {% endblock content %}
 {% comment %} console logun ordaa aplication cookieslerden de görülebilir login olup olmadigi {% endcomment %}
