--- a/In_Class/28_PIZZA_APP/pizzas/templates/pizzas/navbar.html
+++ b/In_Class/28_PIZZA_APP/pizzas/templates/pizzas/navbar.html
@@ -9,11 +9,12 @@
             <ul class="navbar-nav ms-auto">
                 {% if user.is_authenticated %}
                     <li class="nav-item"><a class="nav-link" href=" {% url 'logout' %} ">Logout</a></li>
+                    <li class="nav-item"><a class="nav-link" href=" {% url 'myorders' %} ">My Orders</a></li>
                 {% else %}
                     <li class="nav-item"><a class="nav-link" href=" {% url 'login' %} ">Login</a></li>
                     <li class="nav-item"><a class="nav-link" href=" {% url 'register' %} ">Register</a></li>
                 {% endif %}
-                <li class="nav-item"><a class="nav-link" href="#">Pizzas</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'pizzas' %}">Pizzas</a></li>
             </ul>
     </div>
 </nav>
