--- a/In_Class/28_PIZZA_APP/static/css/stylee.css
+++ b/In_Class/28_PIZZA_APP/static/css/stylee.css
@@ -1,12 +1,40 @@
-body {
-    background-color: chartreuse;
+.body {
+    height: 100vh;
+    background-color: gray;
     background-image: url(../images/nadiasgarden.jpg);
-    background-size: 100%;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-size: cover;
+ 
     
 }
 
 .navbar {
+    
     background-color: #D1E6DD;
+}
+
+#warning {
+    margin-top: 5px;
+    background-color: rgb(247, 11, 11);
+    color: aliceblue;
+    margin: auto;
+    height: 40px;
+    text-align: center;
+}
+
+#success {
+    margin-top: 5px;
+    background-color: rgb(33, 212, 33);
+    color: rgb(231, 200, 158);
+    margin: auto;
+    height: 40px;
+    text-align: center;
+}
+
+#info {
+    margin-top: 5px;
+    background-color: rgb(204, 215, 204);
+    color: rgb(231, 200, 158);
+    margin: auto;
+    height: 40px;
+    text-align: center;
 }
